--- a/config.gradle
+++ b/config.gradle
@@ -1,21 +1,22 @@
 //引入方式：rootProject.ext.android["compileSdkVersion"]
 ext {
-  android = [compileSdkVersion: 23,
-             buildToolsVersion: "24.0.2",
-             minSdkVersion    : 14,
-             targetSdkVersion : 24,
+  android = [compileSdkVersion: 25,
+             buildToolsVersion: "25.0.0",
+             minSdkVersion    : 16,
+             targetSdkVersion : 25,
              versionCode      : 1,
              versionName      : "1.0",
+             supportVersion   : "25.0.0"
   ]
   dependencies = [
       "multidex"                 : "com.android.support:multidex:1.0.1",
       "javax.annotation"         : 'javax.annotation:jsr250-api:1.0',
-      "support-v4"               : "com.android.support:support-v4:24.2.0",
-      "appcompat-v7"             : "com.android.support:appcompat-v7:24.2.0",
-      "recyclerview-v7"          : "com.android.support:recyclerview-v7:24.2.0",
-      "cardview-v7"              : "com.android.support:cardview-v7:24.2.0",
-      "design"                   : "com.android.support:design:24.2.0",
-      "annotations"              : "com.android.support:support-annotations:24.2.0",
+      "support-v4"               : "com.android.support:support-v4:${android["supportVersion"]}",
+      "appcompat-v7"             : "com.android.support:appcompat-v7:${android["supportVersion"]}",
+      "recyclerview-v7"          : "com.android.support:recyclerview-v7:${android["supportVersion"]}",
+      "cardview-v7"              : "com.android.support:cardview-v7:${android["supportVersion"]}",
+      "design"                   : "com.android.support:design:${android["supportVersion"]}",
+      "annotations"              : "com.android.support:support-annotations:${android["supportVersion"]}",
       "retrofit"                 : "com.squareup.retrofit2:retrofit:2.1.0",
       "retrofit-converter-gson"  : "com.squareup.retrofit2:converter-gson:2.1.0",
       "retrofit-adapter-rxjava"  : "com.squareup.retrofit2:adapter-rxjava:2.1.0",
