--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':AndroidMvp', ':kwshare', ':kwmap', ':AndroidStatusBarUtil', ':sample', ':AndroidSuperTextView', ':AndroidDatabinding', ':AndroidSpringView', ':AndroidPayLib'
+include ':app', ':AndroidMvp', ':kwshare', ':kwmap', ':AndroidStatusBarUtil', ':sample', ':AndroidSuperTextView', ':AndroidDatabinding', ':AndroidSpringView', ':AndroidPayLib', ':DatabingSample'
