--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,3 @@
-include ':app', ':AndroidMvp', ':kwshare', ':kwmap', ':AndroidStatusBarUtil', ':sample', ':AndroidSuperTextView', ':AndroidDatabinding', ':AndroidSpringView', ':AndroidPayLib', ':DatabingSample'
+include ':app', ':AndroidMvp', ':kwshare', ':kwmap', ':AndroidStatusBarUtil',
+    ':sample', ':AndroidSuperTextView', ':AndroidDatabinding',
+    ':AndroidSpringView', ':AndroidPayLib', ':DatabingSample'
