--- a/AndroidMvp/build.gradle
+++ b/AndroidMvp/build.gradle
@@ -19,6 +19,10 @@ android {
     }
   }
 
+  dataBinding {
+    enabled true
+  }
+
   lintOptions {
     abortOnError false
   }
@@ -41,10 +45,8 @@ dependencies {
   compile rootProject.ext.dependencies["cardview-v7"]
   compile rootProject.ext.dependencies["annotations"]
   compile rootProject.ext.dependencies["recyclerview-v7"]
-  compile rootProject.ext.dependencies["butterknife"]
   compile rootProject.ext.dependencies["glide"]
   compile rootProject.ext.dependencies["nineoldandroids"]
-  compile rootProject.ext.dependencies["photoview"]
   compile rootProject.ext.dependencies["gson"]
   compile rootProject.ext.dependencies["retrofit"]
   compile rootProject.ext.dependencies["retrofit-converter-gson"]
